add: gf configurator images

--- a/src/i18n/locales/en/models/gf-fire-alarm-push-button.json
+++ b/src/i18n/locales/en/models/gf-fire-alarm-push-button.json
@@ -30,9 +30,7 @@
     "language": {
       "title": "LANGUAGE",
       "options": {
-        "EN": "#EN English",
-        "ES": "#ES Spanish",
-        "FR": "#FR French"
+        "EN": "#EN English"
       }
     }
   }
