--- a/src/i18n/locales/uk/models/gf-fire-alarm-push-button.json
+++ b/src/i18n/locales/uk/models/gf-fire-alarm-push-button.json
@@ -30,9 +30,7 @@
     "language": {
       "title": "МОВА",
       "options": {
-        "EN": "#EN Англійська",
-        "ES": "#ES Іспанська",
-        "FR": "#FR Французька"
+        "EN": "#EN Англійська"
       }
     }
   }
