--- a/src/i18n/locales/uk/models/reset-call-points.json
+++ b/src/i18n/locales/uk/models/reset-call-points.json
@@ -3,7 +3,7 @@
     "name": "ReSet Call Points",
     "description": "Ручні сповіщувачі з можливістю відновлення для систем пожежної сигналізації",
     "heroTitle": "Ручний сповіщувач з можливістю відновлення",
-    "heroDescription": "ReSet Call Point — це ручний сповіщувач, який імітує активацію розбиттям скла, водночас пропонуючи користувачу переваги елемента з можливістю відновлення. При активації індикатор активації випадає у видиму зону. Після цього пристрій просто відновлюється ключем і готовий до негайного повторного використання."
+    "heroDescription": "ReSet Call Point — це ручний сповіщувач, який імітує активацію розбиттям скла, водночас пропонуючи переваги елемента з можливістю відновлення. При активації індикатор активації випадає у видиму зону. Після цього пристрій просто відновлюється ключем і готовий до негайного повторного використання."
   },
   "steps": {
     "colour": {
@@ -17,13 +17,12 @@
         "O": "#O Помаранчевий"
       }
     },
-    "label": {
-      "title": "НАПИС",
+    "mounting": {
+      "title": "МОНТАЖ",
       "options": {
-        "HOUSE_FLAME": "Піктограма пожежі",
-        "RUNNING_MAN": "Піктограма аварійного виходу",
-        "SELF_ASSEMBLE": "Набір для самостійного маркування",
-        "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
+        "D2": "#D2 Подвійний монтаж (настінна пластина + розподільча коробка)",
+        "F2": "#F2 Заглиблений монтаж (настінна пластина)",
+        "S2": "#S2 Накладний монтаж (розподільча коробка)"
       }
     },
     "electricalArrangement": {
@@ -35,12 +34,13 @@
         "11": "#11 Двополюсний перемикальний, Серія 11"
       }
     },
-    "mounting": {
-      "title": "МОНТАЖ",
+    "label": {
+      "title": "НАПИС",
       "options": {
-        "D2": "#D2 Подвійний монтаж (настінна пластина + розподільча коробка)",
-        "F2": "#F2 Заглиблений монтаж (настінна пластина)",
-        "S2": "#S2 Накладний монтаж (розподільча коробка)"
+        "HF": "Піктограма пожежі",
+        "RM": "Піктограма аварійного виходу",
+        "SAK": "Набір для самостійного маркування",
+        "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     }
   }
