--- a/src/i18n/locales/uk/models/indoor-push-buttons.json
+++ b/src/i18n/locales/uk/models/indoor-push-buttons.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "name": "Indoor Push Buttons",
+    "name": "Внутрішні кнопки",
     "description": "Кнопки для внутрішнього використання",
     "heroTitle": "Широкий асортимент кнопок для різноманітних застосувань",
     "heroDescription": "Широкий асортимент привабливих внутрішніх кнопок, що поєднують унікальний дизайн, якість та цінність. Ці естетично привабливі перемикачі низької/високої напруги підходять до будь-якої стандартної британської монтажної коробки та швидко й легко встановлюються."
@@ -28,7 +28,7 @@
         "E": "#E Помаранчева кнопка"
       }
     },
-    "buttonType": {
+    "pushButtonType": {
       "title": "ТИП КНОПКИ",
       "options": {
         "0": "#0 Відновлення ключем",
@@ -36,17 +36,17 @@
         "6": "#6 Пневматичний таймер (ПОДОВЖЕНІ ТЕРМІНИ ПОСТАВКИ)"
       }
     },
-    "electricalArrangement": {
+    "electricalArrangements": {
       "title": "ЕЛЕКТРИЧНА СХЕМА",
       "options": {
         "0": "#0 Однополюсний перемикальний (SPC)",
-        "4": "#4 Мультисигнальний (SPC та DPC)"
+        "4": "#4 Мультифункціональний сигнал (SPC та DPC)"
       }
     },
     "label": {
       "title": "НАПИС",
       "options": {
-        "SELF_ASSEMBLE": "Набір для самостійного маркування",
+        "SAK": "Набір для самостійного маркування",
         "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     }
