add: key switches

--- a/src/i18n/locales/en/models/key-switches.json
+++ b/src/i18n/locales/en/models/key-switches.json
@@ -3,7 +3,7 @@
     "name": "Key Switches",
     "description": "Key switches for access control systems",
     "heroTitle": "Diverse Range of Key Switches with Many Applications",
-    "heroDescription": "A highly versatile range of attractive key switches combining unique design, quality and value, with or without a protective cover or pre-alarm. These aesthetically appealing, low/high voltage switches fit any standard UK-type switch socket box, and are quick and easy to install. Models are supplied as a Dual Mount – designed to fit either flush or surface installations (35mm black surface black back box included.) All models are available in a variety of colours with space for function marking or operating instructions.\n\n<strong>Not suitable for outdoor use. Not compatible with the Enviro Stopper.</strong>"
+    "heroDescription": "A highly versatile range of attractive key switches combining unique design, quality and value, with or without a protective cover or pre-alarm. These aesthetically appealing, low/high voltage switches fit any standard UK-type switch socket box, and are quick and easy to install. Models are supplied as a Dual Mount â€“ designed to fit either flush or surface installations (35mm black surface black back box included.) All models are available in a variety of colours with space for function marking or operating instructions.\n\n<strong>Not suitable for outdoor use. Not compatible with the Enviro Stopper.</strong>"
   },
   "steps": {
     "colourMounting": {
@@ -38,7 +38,7 @@
     "label": {
       "title": "LABEL",
       "options": {
-        "SELF_ASSEMBLE": "Self Assemble Label Kit",
+        "SAK": "Self Assemble Label Kit",
         "CL": "Custom Label (NON-RETURNABLE)"
       }
     }
