--- a/src/i18n/locales/uk/models/key-switches.json
+++ b/src/i18n/locales/uk/models/key-switches.json
@@ -1,13 +1,13 @@
 {
   "meta": {
     "name": "Key Switches",
-    "description": "Перемикачі з ключем для систем контролю доступу",
-    "heroTitle": "Широкий асортимент перемикачів з ключем для різноманітних застосувань",
-    "heroDescription": "Широкий асортимент привабливих перемикачів з ключем, що поєднують унікальний дизайн, якість та цінність, з захисним корпусом або попередньою сигналізацією чи без них. Ці естетично привабливі перемикачі низької/високої напруги підходять до будь-якої стандартної британської монтажної коробки та швидко й легко встановлюються. Моделі постачаються з подвійним монтажем — призначені як для заглибленого, так і для накладного встановлення (чорна накладна розподільча коробка 35мм включена). Усі моделі доступні в різних кольорах з місцем для маркування функції або інструкцій з експлуатації.\n\n<strong>Не призначено для вуличного використання. Не сумісний з Enviro Stopper.</strong>"
+    "description": "Ключ-перемикачі для систем контролю доступу",
+    "heroTitle": "Широкий асортимент ключ-перемикачів для різних застосувань",
+    "heroDescription": "Високоякісна серія привабливих ключ-перемикачів, що поєднують унікальний дизайн, якість і доступність, з захисною кришкою або без неї, з попередньою тривогою або без. Ці естетично привабливі перемикачі низької/високої напруги підходять до будь-якої стандартної настінної монтажної коробки типу UK та швидко й легко встановлюються. Моделі постачаються як Dual Mount — призначені для заглибленого або накладного монтажу (чорна накладна коробка 35 мм у комплекті). Усі моделі доступні в різних кольорах з місцем для маркування функцій або інструкцій з експлуатації.\n\n<strong>Не підходить для зовнішнього використання. Несумісний з Enviro Stopper.</strong>"
   },
   "steps": {
     "colourMounting": {
-      "title": "КОЛІР І МОНТАЖ",
+      "title": "КОЛІР ТА МОНТАЖ",
       "options": {
         "10": "#10 Червоний (подвійний монтаж)",
         "30": "#30 Зелений (подвійний монтаж)",
@@ -29,17 +29,17 @@
     "electricalArrangement": {
       "title": "ЕЛЕКТРИЧНА СХЕМА",
       "options": {
-        "0": "#0 Однополюсний перемикальний",
-        "1": "#1 Двополюсний НВ (нормально відкритий)",
-        "2": "#2 Двополюсний НЗ (нормально замкнутий)",
-        "3": "#3 3-позиційна схема підключення перемикача з ключем"
+        "0": "#0 Однополюсний перемикач",
+        "1": "#1 Двополюсний, нормально відкритий",
+        "2": "#2 Двополюсний, нормально закритий",
+        "3": "#3 Схема 3-позиційного ключ-перемикача"
       }
     },
     "label": {
-      "title": "НАПИС",
+      "title": "ЕТИКЕТКА",
       "options": {
-        "SELF_ASSEMBLE": "Набір для самостійного маркування",
-        "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
+        "SAK": "Набір етикеток для самостійного збирання",
+        "CL": "Власна етикетка (НЕ ПІДЛЯГАЄ ПОВЕРНЕННЮ)"
       }
     }
   }
