--- a/src/i18n/locales/uk/models/waterproof-push-buttons.json
+++ b/src/i18n/locales/uk/models/waterproof-push-buttons.json
@@ -35,17 +35,17 @@
         "1": "#1 Моментальне відновлення"
       }
     },
-    "electricalArrangement": {
+    "electricalArrangements": {
       "title": "ЕЛЕКТРИЧНА СХЕМА",
       "options": {
-        "4": "#4 Мультисигнальний (SPC-DPC)"
+        "4": "#4 Мультифункціональний сигнал (SPC & DPC)"
       }
     },
     "label": {
       "title": "НАПИС",
       "options": {
-        "SELF_ASSEMBLE": "Набір для самостійного маркування",
-        "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
+        "SAK": "# Набір для самостійного маркування",
+        "CL": "#CL Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
       }
     }
   }
