--- a/src/i18n/locales/uk/models/universal-stopper.json
+++ b/src/i18n/locales/uk/models/universal-stopper.json
@@ -2,37 +2,37 @@
   "meta": {
     "name": "Universal Stopper®",
     "description": "Захисний корпус для кнопок та перемикачів",
-    "heroTitle": "Захисний корпус з класом захисту IP для надійного захисту",
-    "heroDescription": "Universal Stopper — це низькопрофільний або купольний полікарбонатний захисний корпус для внутрішнього та вуличного використання. Захищає такі пристрої, як ручні сповіщувачі, аварійні кнопки та тягові станції подвійної дії, не обмежуючи їх штатну роботу.\n\nУніверсальний корпус може використовуватися для захисту кнопок, тягових станцій, електричних пристроїв або ручних сповіщувачів. Universal Stopper забезпечує надійний захист від фізичних пошкоджень (як випадкових, так і навмисних), пилу та бруду, а також від складних умов експлуатації всередині та ззовні приміщень. Варіанти монтажу 0 і 1 відповідають вимогам IP54, варіанти 6 і 7 — IP56 (герметична монтажна пластина з варіантом 6 забезпечує захист IP66)."
+    "heroTitle": "Захисний корпус з класом захисту IP",
+    "heroDescription": "Universal Stopper — це купольний полікарбонатний захисний корпус для внутрішнього та зовнішнього застосування, який захищає пристрої, такі як ручні сповіщувачі, кнопки аварійного виклику та двосторонні пульти тощо, не обмежуючи штатне використання.\n\nУніверсальний корпус може використовуватися як захист кнопок, пультів, електричних пристроїв або сповіщувачів. Universal Stopper забезпечує надійний захист від фізичних пошкоджень (як випадкових, так і навмисних), пилу, бруду та агресивного середовища. Варіанти монтажу 0 та 1 відповідають вимогам IP54. Варіант 2 включає кольорову рамку для накладного монтажу."
   },
   "steps": {
-    "cover": {
-      "title": "КОРПУС",
+    "mounting": {
+      "title": "МОНТАЖ",
       "options": {
-        "13": "#13 Купольний корпус",
-        "14": "#14 Низькопрофільний корпус"
+        "0": "#0 Заглиблений монтаж, відкрита задня панель",
+        "1": "#1 Накладний монтаж — прозорий спейсер (подвійний монтаж)",
+        "2": "#2 Накладний монтаж з кольоровою рамкою"
       }
     },
     "hoodSounder": {
-      "title": "КОЗИРОК І ЗУМЕР",
+      "title": "КОВПАК І ЗУМЕР",
       "options": {
-        "00": "#00 Козирок без напису",
-        "10": "#10 Козирок з написом, без зумера",
-        "20": "#20 Козирок з написом та зумером",
-        "30": "#30 Козирок з написом, зумером та реле"
+        "00": "#00 Без ковпака з написом",
+        "10": "#10 Ковпак з написом, без зумера",
+        "20": "#20 Ковпак з написом та зумером",
+        "30": "#30 Ковпак з написом, зумером та реле"
       }
     },
     "colourLabel": {
       "title": "КОЛІР І НАПИС",
       "options": {
-        "FR": "#FR Червоний, напис FIRE ALARM",
+        "FR": "#FR Червоний, напис 'FIRE ALARM'",
         "NR": "#NR Червоний, без напису",
         "CR": "#CR Червоний, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
-        "EG": "#EG Зелений, напис EMERGENCY EXIT",
+        "EG": "#EG Зелений, напис 'Emergency Exit'",
         "NG": "#NG Зелений, без напису",
         "CG": "#CG Зелений, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
         "NC": "#NC Прозорий, без напису",
-        "NK": "#NK Чорний, без напису",
         "CK": "#CK Чорний, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
         "NB": "#NB Синій, без напису",
         "CB": "#CB Синій, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
@@ -40,25 +40,6 @@
         "CW": "#CW Білий, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
         "NY": "#NY Жовтий, без напису",
         "CY": "#CY Жовтий, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
-      }
-    },
-    "language": {
-      "title": "МОВА",
-      "options": {
-        "EN": "#EN Англійська",
-        "ES": "#ES Іспанська",
-        "FR": "#FR Французька",
-        "DE": "#DE Німецька",
-        "NL": "#NL Голландська"
-      }
-    },
-    "mounting": {
-      "title": "МОНТАЖ",
-      "options": {
-        "0": "#0 Заглиблений монтаж, відкрита задня частина",
-        "1": "#1 Накладний монтаж, прозорий спейсер (подвійний монтаж)",
-        "6": "#6 Європейська закрита розподільча коробка, різьбовий ввід 20мм, герметична монтажна пластина",
-        "7": "#7 Європейська закрита розподільча коробка, різьбовий ввід 20мм, відкрита монтажна пластина"
       }
     }
   }
