--- a/src/i18n/locales/uk/models/low-profile-universal-stopper.json
+++ b/src/i18n/locales/uk/models/low-profile-universal-stopper.json
@@ -3,7 +3,7 @@
     "name": "Low Profile Universal Stopper®",
     "description": "Низькопрофільний захисний корпус для кнопок та перемикачів",
     "heroTitle": "Низькопрофільний захисний корпус з класом захисту IP",
-    "heroDescription": "Low Profile Universal Stopper підходить для внутрішнього або вуличного монтажу. Ці полікарбонатні корпуси можуть використовуватися як захист ручних сповіщувачів або для захисту різних пристроїв, таких як кнопки та перемикачі з ключем, від пошкоджень та неправильного використання, не перешкоджаючи роботі в аварійних ситуаціях. Ці надійні корпуси забезпечують чудовий захист пристроїв (як від навмисних, так і від випадкових пошкоджень), пилу та бруду, а також від складних умов експлуатації всередині та ззовні приміщень. Варіанти монтажу 0, 1 і 7 відповідають вимогам IP56, варіант 6 — IP66. Захист, який забезпечують ці корпуси, допомагає запобігти зловмисній активації пристроїв та заощадити час і кошти для бізнесу та громадських будівель. Новий картридж зумера для Low Profile Universal Stopper оснащений вбудованим світлодіодом, який активується разом зі звуковою сигналізацією для додаткового візуального попередження.\n\nДля купольної версії Universal Stopper <a href=\"/configurator/universal-stopper\" class=\"text-primary underline hover:text-primary/80\">натисніть тут</a>."
+    "heroDescription": "Low Profile Universal Stopper підходить для внутрішнього або вуличного монтажу. Ці полікарбонатні корпуси можуть використовуватися як захист ручних сповіщувачів або для захисту різних пристроїв, таких як кнопки та перемикачі з ключем, від пошкоджень та неправильного використання, не перешкоджаючи роботі в аварійних ситуаціях. Ці надійні корпуси забезпечують чудовий захист пристроїв (як від навмисних, так і від випадкових пошкоджень), пилу та бруду, а також від складних умов експлуатації всередині та ззовні приміщень. Варіанти монтажу 0 і 1 відповідають вимогам IP54, варіант 2 призначений для накладного монтажу з кольоровою рамкою. Захист, який забезпечують ці корпуси, допомагає запобігти зловмисній активації пристроїв та заощадити час і кошти для бізнесу та громадських будівель. Новий картридж зумера для Low Profile Universal Stopper оснащений вбудованим світлодіодом, який активується разом зі звуковою сигналізацією для додаткового візуального попередження.\n\nДля купольної версії Universal Stopper <a href=\"/configurator/universal-stopper\" class=\"text-primary underline hover:text-primary/80\">натисніть тут</a>."
   },
   "steps": {
     "cover": {
@@ -17,36 +17,18 @@
       "options": {
         "00": "#00 Козирок без напису",
         "10": "#10 Козирок з написом, без зумера",
-        "20": "#20 Козирок з написом та зумером (ПОДОВЖЕНІ ТЕРМІНИ ПОСТАВКИ)",
-        "30": "#30 Козирок з написом, зумером та кабелем реле (ПОДОВЖЕНІ ТЕРМІНИ ПОСТАВКИ)"
+        "20": "#20 Козирок з написом та зумером"
       }
     },
     "colourLabel": {
       "title": "КОЛІР І НАПИС",
       "options": {
         "FR": "#FR Червоний, напис FIRE ALARM",
-        "NR": "#NR Червоний, без напису",
-        "CR": "#CR Червоний, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
         "EG": "#EG Зелений, напис EMERGENCY EXIT",
-        "NG": "#NG Зелений, без напису",
-        "CG": "#CG Зелений, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
         "NC": "#NC Прозорий, без напису",
-        "NB": "#NB Синій, без напису",
-        "CB": "#CB Синій, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
         "NW": "#NW Білий, без напису",
-        "CW": "#CW Білий, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)",
         "NY": "#NY Жовтий, без напису",
         "CY": "#CY Жовтий, індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
-      }
-    },
-    "language": {
-      "title": "МОВА",
-      "options": {
-        "EN": "#EN Англійська",
-        "ES": "#ES Іспанська",
-        "FR": "#FR Французька",
-        "DE": "#DE Німецька",
-        "NL": "#NL Голландська"
       }
     },
     "mounting": {
@@ -54,8 +36,7 @@
       "options": {
         "0": "#0 Заглиблений монтаж, відкрита задня частина",
         "1": "#1 Накладний монтаж, прозорий спейсер (подвійний монтаж)",
-        "6": "#6 Європейська закрита розподільча коробка, різьбовий ввід 20мм, герметична монтажна пластина",
-        "7": "#7 Європейська закрита розподільча коробка, різьбовий ввід 20мм, відкрита монтажна пластина"
+        "2": "#2 Накладний монтаж з кольоровою рамкою"
       }
     }
   }
