--- a/src/i18n/locales/uk/models/call-point-stopper.json
+++ b/src/i18n/locales/uk/models/call-point-stopper.json
@@ -20,21 +20,11 @@
     "label": {
       "title": "НАПИС",
       "options": {
-        "FIRE": "У разі пожежі",
-        "EMERGENCY_BREAK": "В аварійній ситуації розбити скло",
-        "EMERGENCY_OPERATE": "В аварійній ситуації активувати",
-        "PLAIN": "Без напису",
-        "CL": "Індивідуальний напис (БЕЗ ПОВЕРНЕННЯ)"
-      }
-    },
-    "language": {
-      "title": "МОВА",
-      "options": {
-        "EN": "#EN Англійська",
-        "ES": "#ES Іспанська",
-        "FR": "#FR Французька",
-        "DE": "#DE Німецька",
-        "NL": "#NL Голландська"
+        "FIRE": "# У РАЗІ ПОЖЕЖІ ПІДНІМІТЬ КРИШКУ - РОЗБИЙТЕ СКЛО",
+        "EMERGENCY_DOOR": "# В АВАРІЙНІЙ СИТУАЦІЇ - ПІДНІМІТЬ КРИШКУ РОЗБИЙТЕ СКЛО ДЛЯ ВІДЧИНЕННЯ ДВЕРЕЙ",
+        "EMERGENCY_OPERATE": "# В АВАРІЙНІЙ СИТУАЦІЇ ПІДНІМІТЬ КРИШКУ - АКТИВУЙТЕ ПРИСТРІЙ",
+        "CL": "#CL Індивідуальний напис",
+        "PLAIN": "#PLAIN Без тексту"
       }
     },
     "mounting": {
