add: euro stopper configurator

--- a/src/i18n/locales/uk/models/euro-stopper.json
+++ b/src/i18n/locales/uk/models/euro-stopper.json
@@ -6,23 +6,12 @@
     "heroDescription": "Захисні корпуси для ручних сповіщувачів, які допомагають запобігти зловмисній або випадковій активації. Euro Stopper складається з прозорого, захищеного від несанкціонованого доступу, міцного УФ-стійкого полікарбонатного корпусу та рамки, яка встановлюється поверх ручного сповіщувача з імітацією розбиття скла.\n\nGlow Guide — унікальний матеріал, вбудований по периметру рамки, який світиться в темряві, створюючи яскраве сяйво навколо ручного сповіщувача та полегшуючи його пошук у темних місцях. Ідеально підходить для шкіл, коледжів, лікарень, будинків престарілих, готелів та всіх громадських будівель, де є історія або загроза хибних спрацювань."
   },
   "steps": {
-    "colourLabel": {
-      "title": "КОЛІР І НАПИС",
+    "mounting": {
+      "title": "МОНТАЖ",
       "options": {
-        "NR": "#NR Червоний, без напису",
-        "CR": "#CR Червоний, індивідуальний напис",
-        "NG": "#NG Зелений, без напису",
-        "CG": "#CG Зелений, індивідуальний напис",
-        "NY": "#NY Жовтий, без напису",
-        "CY": "#CY Жовтий, індивідуальний напис",
-        "NW": "#NW Білий, без напису",
-        "CW": "#CW Білий, індивідуальний напис",
-        "NB": "#NB Синій, без напису",
-        "CB": "#CB Синій, індивідуальний напис",
-        "NE": "#NE Помаранчевий, без напису",
-        "CE": "#CE Помаранчевий, індивідуальний напис",
-        "NK": "#NK Чорний, без напису",
-        "CK": "#CK Чорний, індивідуальний напис"
+        "0": "#0 Заглиблений монтаж",
+        "C": "#C Накладний монтаж, спейсер 32мм",
+        "D": "#D Накладний монтаж, спейсер 50мм"
       }
     },
     "sounder": {
@@ -33,12 +22,26 @@
         "30": "#30 Козирок з написом, зумером та реле"
       }
     },
-    "mounting": {
-      "title": "МОНТАЖ",
+    "colourLabel": {
+      "title": "КОЛІР І НАПИС",
       "options": {
-        "0": "#0 Заглиблений монтаж",
-        "C": "#C Накладний монтаж, спейсер 32мм",
-        "D": "#D Накладний монтаж, спейсер 50мм"
+        "ML": "#ML Мультимовний комплект (червона та зелена кришка)",
+        "FR": "#FR Напис пожежної тривоги (червоний)",
+        "EG": "#EG Напис аварійного виходу (зелений)",
+        "NR": "#NR Червоний, без напису",
+        "NG": "#NG Зелений, без напису",
+        "NY": "#NY Жовтий, без напису",
+        "NW": "#NW Білий, без напису",
+        "NB": "#NB Синій, без напису",
+        "NE": "#NE Помаранчевий, без напису",
+        "NK": "#NK Чорний, без напису",
+        "CR": "#CR Червоний, індивідуальний напис",
+        "CG": "#CG Зелений, індивідуальний напис",
+        "CY": "#CY Жовтий, індивідуальний напис",
+        "CW": "#CW Білий, індивідуальний напис",
+        "CB": "#CB Синій, індивідуальний напис",
+        "CE": "#CE Помаранчевий, індивідуальний напис",
+        "CK": "#CK Чорний, індивідуальний напис"
       }
     }
   }
